--- a/public/backend/asset/css/style.css
+++ b/public/backend/asset/css/style.css
@@ -29007,7 +29007,7 @@ div.tagsinput span.tag a {
 }
 
 .sidebar .nav.sub-menu .nav-item .nav-link {
-    color: #6c7293;
+    color: #070708;
     padding: 0.5rem 0.35rem;
     position: relative;
     font-size: 0.855rem;
