--- a/public/landing/asset/css/style.css
+++ b/public/landing/asset/css/style.css
@@ -355,6 +355,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgba(0, 0, 0, 0.8);
   overflow: hidden;
   position: relative;
+  margin: 50px;
 }
 
 #hero .carousel, #hero .carousel-inner, #hero .carousel-item, #hero .carousel-item::before {
